# Robotics

./: README.md  frames_2024-10-21_17.24.42.gv  frames_2024-10-21_17.29.54.gv  frames_2024-10-22_11.12.37.gv
install/: local_setup.sh  setup.sh
install/launch_pal/share/launch_pal/: package.sh  package.xml
install/pal_gazebo_worlds/share/pal_gazebo_worlds/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pal_gripper/share/pal_gripper/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pal_gripper_controller_configuration/share/pal_gripper_controller_configuration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pal_gripper_description/share/pal_gripper_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pal_gripper_simulation/share/pal_gripper_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build  latest_mixin  latest_version-check
maps/: map.pgm  map.yaml  map2.pgm  map3.pgm  map3.yaml  map4.pgm  map4.yaml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/tiago_simulation/tiago_gazebo/: CMakeLists.txt
src/tiago_simulation/tiago_gazebo/launch/: .tiago_gazebo.launch.py.swo  tiago_cafe.launch.py  tiago_gazebo.launch.py
src/tiago_simulation/tiago_gazebo/scripts/: head_control.py  listener.py  prepare_pickup.py  talker.py  vision.py
(+1484 files in other folders)
